# OpenGL_Glad

./: CMakeLists.txt  ReadMe.md
Archives/SourceFiles/: shaderConfig.cpp  shaderConfig.h
Archives/V002/: Glfw_Manager.cpp  Glfw_Manager.h  OpenGLCOntext.cpp  OpenGLCOntext.h  Source.cpp  TriangleRender.cpp  TriangleRender.h
Archives/Version001/: Notes.md
Archives/Version001/Include_/: GLFW_Window.h  OpenGL_Context.h  ShaderContext.h  config.h
Archives/Version001/Src/: GLFW_window.cpp  OpenGL_Context.cpp  ShaderContext.cpp  main.cpp
Dependencies/glad/: gl.h  glad.h
Dependencies/glad/src/: glad.c
Headers/: Glfw_main.h  OpenGL_Core.h  config.h
Src/: CMakeLists.txt  Glfw_main.cpp  OpenGL_Core.cpp  Source.cpp
